# DnD

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: main.cpp
src/character/: CMakeLists.txt  Hero.cpp  Hero.ixx  HeroicCreature.cpp  HeroicCreature.ixx  ICreature.cpp  ICreature.ixx  RaceCreature.cpp  RaceCreature.ixx  Spellcaster.cpp  Spellcaster.ixx
src/character/class/: Barbarian.cpp  Barbarian.ixx  Bard.cpp  Bard.ixx  Cleric.cpp  Cleric.ixx  Druid.cpp  Druid.ixx  Fighter.cpp  Fighter.ixx  IClass.cpp  IClass.ixx  Monk.cpp  Monk.ixx  Paladin.cpp  Paladin.ixx  Ranger.cpp  Ranger.ixx  Rogue.cpp  Rogue.ixx  Sorcerer.cpp  Sorcerer.ixx  Warlock.cpp  Warlock.ixx  Wizard.cpp  Wizard.ixx
src/character/race/: Dragonborn.cpp  Dragonborn.ixx  Dwarf.cpp  Dwarf.ixx  Elf.cpp  Elf.ixx  Gnome.cpp  Gnome.ixx  HalfElf.cpp  HalfElf.ixx  HalfOrc.cpp  HalfOrc.ixx  Halfling.cpp  Halfling.ixx  Human.cpp  Human.ixx  IRace.cpp  IRace.ixx  Tiefling.cpp  Tiefling.ixx
src/common/: CMakeLists.txt  Die.cpp  Die.ixx  enumeration.cpp  enumeration.ixx
src/equipment/: Armor.cpp  Armor.ixx  CMakeLists.txt  Item.cpp  Item.ixx  Weapon.cpp  Weapon.ixx
src/utilities/: CMakeLists.txt  Logger.cpp  Logger.ixx  io.cpp  io.ixx
